<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/input_"
        android:gravity="right|center"
        android:textSize="@dimen/TextSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/Text"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/one"
                android:background="@drawable/ic_btn"
                style="@style/cul_btn"
                android:text="@string/_1" />

            <Button
                android:id="@+id/two"
                android:background="@drawable/ic_btn"
                style="@style/cul_btn"
                android:text="@string/_2" />

            <Button
                android:id="@+id/three"
                android:background="@drawable/ic_btn"
                style="@style/cul_btn"
                android:text="@string/_3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/forr"
                android:background="@drawable/ic_btn"
                style="@style/cul_btn"
                android:text="@string/_4" />

            <Button
                android:id="@+id/five"
                android:background="@drawable/ic_btn"
                style="@style/cul_btn"
                android:text="@string/_5" />

            <Button
                android:id="@+id/six"
                android:background="@drawable/ic_btn"
                style="@style/cul_btn"
                android:text="@string/_6" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/saven"
                android:background="@drawable/ic_btn"
                style="@style/cul_btn"
                android:text="@string/_7" />

            <Button
                android:id="@+id/eight"
                android:background="@drawable/ic_btn"
                style="@style/cul_btn"
                android:text="@string/_8" />

            <Button
                android:id="@+id/nine"
                android:background="@drawable/ic_btn"
                style="@style/cul_btn"
                android:text="@string/_9" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <View
                style="@style/cul_btn"
                android:visibility="invisible" />

            <Button
                android:id="@+id/zero"
                android:background="@drawable/ic_btn"
                style="@style/cul_btn"
                android:text="@string/_0" />

            <View
                style="@style/cul_btn"
                android:visibility="invisible" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/plus"
                android:background="@drawable/ic_btn"
                style="@style/cul_btn"
                android:text="@string/plus" />

            <Button
                android:id="@+id/minus"
                android:background="@drawable/ic_btn"
                style="@style/cul_btn"
                android:text="@string/min" />

            <Button
                android:id="@+id/exactly"
                android:background="@drawable/ic_btn"
                style="@style/cul_btn"
                android:text="@string/rav" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/multip"
                android:background="@drawable/ic_btn"
                style="@style/cul_btn"
                android:text="@string/ym" />

            <Button
                android:id="@+id/devision"
                android:background="@drawable/ic_btn"
                style="@style/cul_btn"
                android:text="@string/del" />

            <Button
                android:id="@+id/resut"
                android:background="@drawable/ic_btn"
                style="@style/cul_btn"
                android:text="C" />
        </LinearLayout>

    </LinearLayout>



</RelativeLayout>